--- a/README
+++ b/README
@@ -1,25 +1,25 @@
 ## Installing
 Download to a local folder
 
-```bash
+```Bash
 $ git clone https://github.com/QantumEntangled/opensips-docker.git
 $ cd opensips-docker
 ```
 
 Build the docker image
 
-```bash
+```Bash
 $ docker build -t opensips-docker ./
 ```
 
 Run the docker container
 
-```bash
+```Bash
 $ docker run -td --name opensips-container -p 80:80 -p 5060 --cap-add=NET_ADMIN opensips-docker
 ```
 
 To log into the container to make configuration changes
 
-```bash
+```Bash
 $ docker exec -it opensips-container /bin/bash
 ```
